Fix bug 1233979: Make keyboard shortcuts more visible
Also remove the ".popup" concept, which is no longer used

--- a/pontoon/base/static/css/style.css
+++ b/pontoon/base/static/css/style.css
@@ -369,8 +369,7 @@ label {
   display: none!important;
 }
 
-.select .menu,
-.select .popup {
+.select .menu {
   background: #272A2F;
   bottom: 50px;
   color: #AAAAAA;
